--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "next": "14.2.1",
     "next-auth": "^4.24.7",
     "react": "^18",
+    "react-cropper": "^2.3.3",
     "react-dom": "^18",
+    "react-dropzone": "^14.2.3",
     "react-icons": "^5.1.0",
     "react-intersection-observer": "^9.8.2",
     "react-loading-skeleton": "^3.4.0",
